# QssCreator

./: .gitignore  CMakeLists.txt  QssCreator.pro  QssHelper.pro  QssHelper_zh_CN.ts  README.md  colordeftablemodel.cpp  colordeftablemodel.h  defines.pri  mainwindow.cpp  mainwindow.h  mainwindow.ui  qss_helper.cpp  qss_helper.h  qsseditor.pro  qsseditorlibrary.pri  qsshighlighter.h
conf/: QtClassKeyWord.txt  config.ini  qssKeyWord.txt
qssFile/: color.def  color.qssdef  default - 副本.qss  replace.qss
src/: QssCreator_zh_CN.ts  QssHelper_zh_CN.ts  centerwidget.cpp  centerwidget.h  colordefwidget.cpp  colordefwidget.h  colordefwidget.ui  configdialog.cpp  configdialog.h  configdialog.ui  finddialog.cpp  finddialog.h  findreplacedialog.cpp  findreplacedialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mytabwidget.cpp  mytabwidget.h  mytabwidget.ui  previewqsswidget.cpp  previewqsswidget.h  previewqsswidget.ui  qssmanager.cpp  qssmanager.h  qsstestwidget.ui  qsstexteditmanager.cpp  qsstexteditmanager.h  resource.qrc  src.pro  textsettingswidget.cpp  textsettingswidget.h  textsettingswidget.ui
utils/: colordeftablemodel.cpp  colordeftablemodel.h  config.cpp  config.h  constants.h  fancyactionbar.cpp  fancytabwidget.cpp  fancytabwidget.h  fileHelper.cpp  fileHelper.h  icon.cpp  icon.h  infobar.cpp  oshelper.h  path.cpp  path.h  qss_helper.cpp  qss_helper.h  qsscompleter.cpp  qsscompleter.h  qsshighlighter.cpp  qsshighlighter.h  qssproxymodel.cpp  qssproxymodel.h  qsstextedit.cpp  qsstextedit.h  singleton.h  stringutils.h  stylehelper.cpp  tabwidget.cpp  theme.h  (+9 more)
(+35 files in other folders)
